# PedestrianClassifier

./: .gitignore  CMakeLists.txt  README.md  app
include/: annotation_parser.h  data_loader.h
src/: annotation_parser.cpp  data_loader.cpp  main  main.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
